--- a/app/src/main/res/layout/fragment_photo_gallery.xml
+++ b/app/src/main/res/layout/fragment_photo_gallery.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnWidth="120dp"
-    android:numColumns="auto_fit"
+    android:columnWidth="300dp"
+    android:numColumns="1"
+    android:gravity="center"
     android:stretchMode="columnWidth"
     android:id="@+id/photo_gridview">
 
