Added image caching using LRU cache and made activity orientation exclusively portrait

--- a/app/src/main/res/layout/fragment_photo_gallery.xml
+++ b/app/src/main/res/layout/fragment_photo_gallery.xml
@@ -7,6 +7,7 @@
     android:numColumns="1"
     android:gravity="center"
     android:stretchMode="columnWidth"
+    android:background="#000000"
     android:id="@+id/photo_gridview">
 
 </GridView>
